# spambayes3

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py  testemail.txt
Outlook2000/docs/: setup.py
contrib/: findbest.py  nway.py  pycksum.py  sb_culler.py  showclues.py  spamcounts.py  tte.py
scripts/: sb_chkopts.py  sb_filter.py  sb_mboxtrain.py  sb_pop3dnd.py
spambayes/: MoinSecurityPolicy.py  Options.py  __init__.py  classifier.py  compatcsv.py  dbmstorage.py  hammie.py  mboxutils.py  postfixproxy.py  smtpproxy.py  storage.py  tokenizer.py
spambayes/scripts/: core_server.py  sb_bnserver.py  sb_filter.py  sb_imapfilter.py  sb_mailsort.py  sb_mboxtrain.py  sb_server.py  sb_unheader.py  sb_upload.py
testtools/: cmp.py  rates.py  table.py
utilities/: export_apple_mail.py  extractmessages.py  mkreversemap.py  pop3graph.py  rebal.py  which_database.py
windows/: autoconfigure.py  pop3proxy_tray.py
