[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spambayes"
version = "3.3.10"
authors = [
    {name = "David Woakes", email = "david@woak.es"},
    {name = "Mark Wilson", email = "cdr.nil@gmail.com"},
]
description = "SpamBayes spam filter"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["one"]
license = {text = "BSD-3-Clause"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: Plugins',
    'Environment :: Win32 (MS Windows)',
    'License :: OSI Approved :: Python Software Foundation License',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Intended Audience :: End Users/Desktop',
    'Topic :: Communications :: Email :: Filters',
    'Topic :: Communications :: Email :: Post-Office :: POP3',
    'Topic :: Communications :: Email :: Post-Office :: IMAP',
]
dependencies = [
    "lockfile>=0.6",
    "py3dns>=2.0",
]

[project.scripts]
sb_filter = "spambayes.scripts.sb_filter:main"
sb_mboxtrain = "spambayes.scripts.sb_mboxtrain:main"

[tool.hatch.build.targets.wheel]
packages = ["spambayes"]
